static/namespace.yaml
# my-app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-app-namespace
