static/deployment.yaml
# my-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
  namespace: my-app-namespace
spec:
  replicas: 2  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80  # Nginx listens on port 80
          volumeMounts:
            - name: custom-html-volume
              mountPath: /usr/share/nginx/html/statics.html
              subPath: statics.html
      volumes:
        - name: custom-html-volume
          configMap:
            name: my-app-configmap
