static/service.yaml
# my-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: my-app-namespace
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80  # Port exposed by the service
      targetPort: 80  # Port on the container where Nginx is listening
  type: ClusterIP  # Exposes the service internally within the cluster
